--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-google-places-autocomplete": "^1.3.9",
+    "react-native-image-gallery": "^2.1.5",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-lightbox": "^0.8.0",
