Added facebook scheme info

--- a/app.json
+++ b/app.json
@@ -34,6 +34,9 @@
     },
     "android": {
       "package": "com.bleachertechnologies.bleacherscoringvolleyball"
-    }
+    },
+    "facebookScheme":"fb218649529019531",
+    "facebookAppId": "218649529019531",
+    "facebookDisplayName":"Bleacher Scoring"
   }
 }
